# DeepSeek-TUI

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  config.example.toml  package-lock.json  package.json
.github/: AUTHOR_MAP
.github/workflows/: auto-tag.yml  ci.yml  nightly.yml  release-artifacts.yml  release-candidate.yml  release.yml  web.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/lane/: Cargo.toml
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CHANGELOG_ARCHIVE.md  CLASSROOM_INSTALL.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  MODES.md  PLUGIN_BUNDLES.md  PROVIDERS.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SUBAGENTS.md  TOOL_SURFACE.md  WORKFLOW_AUTHORING.md  WORKROOM_SECURITY.md  public-surface-facts.json
docs/architecture/: command-dispatch.md
extensions/vscode/: package-lock.json
integrations/wecom-bridge/: .env.example  README.md  package-lock.json  package.json
npm/codewhale/: README.md  package.json
scripts/installer/: codewhale.nsi
scripts/release/: assemble-release-assets.test.js  branch-hygiene.test.sh  check-ohos-deps.sh  create-release-bundles.sh  (+2 more)
web/: package-lock.json  package.json
web/lib/: facts-drift.ts  (+2 more)
workflows/: stopship.workflow.js
(+204 files in other folders)
