[package]
name = "codewhale-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Session/thread persistence and recovery model for CodeWhale"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
